<resources>
    <string name="app_name">CooktifyApp</string>
    <string name="onboard">Halo, Selamat Datang!
        Silahkan siapkan akun Anda terlebih dahulu. </string>
    <string name="Login_button">Login</string>
    <string name="Register_button">Register</string>
    <string name="account_info">Atau Login Pakai</string>
    <string name="Login_info">Selamat Datang, </string>
    <string name="Login_info2">Silahkan Login Terlebih Dahulu</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Nama</string>
    <string name="hint_password">Password</string>
    <string name="Register_info">Belum Punya Akun?</string>
    <string name="Register_info2">Lengkap Data Dirimu\nDibawah ini Ya</string>
    <string name="home_icon">Home</string>
    <string name="camera_icon">Camera</string>
    <string name="favotie_home">Favorite</string>
    <string name="account_home">Account</string>
    <string name="dasboard_info">Find What Food You Can \nMake !!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seeall">See all</string>
    <string name="start">Start</string>
    <string name="input_camera">CAMERA</string>
    <string name="input_galery">GALERY</string>
    <string name="items_name">Nama Bahan</string>
    <string name="fav_name">Nama Makanan Fav</string>
    <string name="favorite">Favorite</string>
    <string name="keluar">Keluar</string>
    <string name="info_pribadi">Info Pribadi</string>
    <string name="favorite_recipes">Favorite Recipes</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="input_theme">Theme</string>
    <string name="notif">Notifications</string>
    <string name="sounds">Sounds</string>
    <string name="Logout">Logout</string>
    <string name="Recipes">Recipes</string>
    <string name="nama_menu">Nama Menu</string>
    <string name="bahan_utama">Bahan Utama:</string>
    <string name="bahan_tambahan">Bahan Tambahan:</string>
    <string name="cook_time">Cook Time</string>
    <string name="resep">Resep</string>
    <string name="cara_membuat">Cara Membuat</string>
    <string name="set_timer">Set Timer</string>
    <string name="lorem_time">00:00</string>
    <string name="home">Home</string>
    <string name="favorite_fragment">Favorite</string>
    <string name="profil">Profile</string>
    <string name="Input">Input</string>
    <string name="hi_user">Hi User</string>
    <string name="default_web_client_id">74095892502-4a2ncupo3s11iocgq08c56g5m6ife4en.apps.googleusercontent.com</string>
    <string name="ingredients">Ingredients</string>
    <string name="edit_your_account">Info Pribadi</string>
    <string name="upload_image">Upload Image</string>
    <string name="simpan">Simpan</string>
    <string name="nama_bahan">Nama Bahan</string>
</resources>