<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navHome">

    <fragment
        android:id="@+id/navHome"
        android:name="com.example.cooktifyapp.view.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"
        />

    <fragment
        android:id="@+id/navCamera"
        android:name="com.example.cooktifyapp.view.navigation.inputImages.InputImage"
        android:label="@string/Input"
        tools:layout="@layout/fragment_input_image"
        />

    <fragment
        android:id="@+id/navFavorite"
        android:name="com.example.cooktifyapp.view.navigation.favorite.FavoriteFragment"
        android:label="@string/favorite_fragment"
        tools:layout="@layout/fragment_favorite"
        />

    <fragment
        android:id="@+id/navProfile"
        android:name="com.example.cooktifyapp.view.navigation.profile.ProfileFragment"
        android:label="@string/profil"
        tools:layout="@layout/fragment_profile"
        />

</navigation>